# WordleSolver

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
WordleSolver/: Board.cpp  Board.h  CMakeLists.txt  Common.h  Solver.cpp  Solver.h  WordleSolver.cpp
WordleSolver/data/: Dictionary.cpp  Dictionary.h  DictionaryLoader.cpp  DictionaryLoader.h
